--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/passport": "^9.2",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
+        "predis/predis": "^1.1",
         "tymon/jwt-auth": "dev-develop"
     },
     "require-dev": {
